@@ -1,7 +1,7 @@
 /* KallistiOS ##version##
 
    sip.c
-   Copyright (C) 2005, 2008 Lawrence Sebald
+   Copyright (C) 2005, 2008, 2013 Lawrence Sebald
 */
 
 #include <assert.h>
@@ -52,6 +52,7 @@ static void sip_stop_sampling_cb(maple_frame_t *frame) {
     /* Clear the is_sampling flag. */
     sip = (sip_state_t *)frame->dev->status;
     sip->is_sampling = 0;
+    sip->callback = NULL;
 
     /* Wake up! */
     genwait_wake_all(frame);
@@ -112,7 +113,7 @@ int sip_set_frequency(maple_device_t *dev, unsigned int freq) {
     return MAPLE_EOK;
 }
 
-int sip_start_sampling(maple_device_t *dev, int block) {
+int sip_start_sampling(maple_device_t *dev, sip_sample_cb cb, int block) {
     sip_state_t *sip;
     uint32 *send_buf;
 
@@ -120,13 +121,15 @@ int sip_start_sampling(maple_device_t *dev, int block) {
 
     sip = (sip_state_t *)dev->status;
 
-    /* Make sure we aren't yet sampling */
-    if(sip->is_sampling)
+    /* Make sure we aren't yet sampling and that the callback is sane. */
+    if(sip->is_sampling || !cb)
         return MAPLE_EFAIL;
 
     /* Lock the frame */
     if(maple_frame_lock(&dev->frame) < 0)
         return MAPLE_EAGAIN;
+
+    sip->callback = cb;
 
     /* Reset the frame */
     maple_frame_init(&dev->frame);
@@ -204,76 +207,10 @@ int sip_stop_sampling(maple_device_t *dev, int block) {
     return MAPLE_EOK;
 }
 
-uint8 *sip_get_samples(maple_device_t *dev, size_t *sz) {
-    sip_state_t *sip;
-    uint8 *rv;
-    uint32 old;
-
-    assert(dev != NULL);
-    assert(sz != NULL);
-
-    /* Disable interrupts so that nothing changes underneath us. */
-    old = irq_disable();
-
-    sip = (sip_state_t *)dev->status;
-
-    /* Make sure that we're not currently sampling. */
-    if(sip->is_sampling) {
-        irq_restore(old);
-        *sz = (size_t) - 1;
-        return NULL;
-    }
-
-    /* Grab the values to return. */
-    *sz = sip->buf_pos;
-    rv = sip->samples_buf;
-
-    /* Allocate us a new buffer. */
-    sip->buf_pos = 0;
-    sip->samples_buf = (uint8 *)malloc(11025 * 2 * 10);
-
-    if(sip->samples_buf == NULL) {
-        sip->buf_len = 0;
-        dev->status_valid = 0;
-    }
-    else {
-        sip->buf_len = 11025 * 2 * 10;
-        dev->status_valid = 1;
-    }
-
-    irq_restore(old);
-    return rv;
-}
-
-int sip_clear_samples(maple_device_t *dev) {
-    sip_state_t *sip;
-    uint32 old;
-
-    assert(dev != NULL);
-
-    /* Disable IRQs so that nothing changes under us */
-    old = irq_disable();
-
-    sip = (sip_state_t *)dev->status;
-
-    if(sip->is_sampling) {
-        irq_restore(old);
-        return MAPLE_EFAIL;
-    }
-
-    sip->buf_pos = 0;
-
-    irq_restore(old);
-
-    return MAPLE_EOK;
-}
-
 static void sip_reply(maple_frame_t *frm) {
     maple_response_t *resp;
     uint32 *respbuf;
-    size_t sz;
     sip_state_t *sip;
-    void *tmp;
 
     /* Unlock the frame now (it's ok, we're in an IRQ) */
     maple_frame_unlock(frm);
@@ -293,24 +230,9 @@ static void sip_reply(maple_frame_t *frm) {
         sip = (sip_state_t *)frm->dev->status;
         frm->dev->status_valid = 1;
 
-        if(sip->is_sampling) {
-            sz = resp->data_len * 4 - 8;
-
-            /* Resize the buffer, if it is needed. */
-            if(sz + sip->buf_pos > sip->buf_len) {
-                /* Attempt to double the buffer size. */
-                tmp = realloc(sip->samples_buf, sip->buf_len << 1);
-
-                if(!tmp) {
-                    return;
-                }
-
-                sip->samples_buf = tmp;
-                sip->buf_len <<= 1;
-            }
-
-            memcpy(sip->samples_buf + sip->buf_pos, resp->data + 8, sz);
-            sip->buf_pos += sz;
+        if(sip->is_sampling && sip->callback) {
+            /* Call the user's callback. */
+            sip->callback(frm->dev, resp->data + 8, (resp->data_len << 2) - 8);
         }
     }
 }
@@ -322,7 +244,7 @@ static int sip_poll(maple_device_t *dev) {
     sip = (sip_state_t *)dev->status;
 
     /* Test to make sure that the particular mic is enabled */
-    if(!sip->is_sampling) {
+    if(!sip->is_sampling || !sip->callback) {
         dev->status_valid = 1;
         return 0;
     }
@@ -354,32 +276,12 @@ static void sip_periodic(maple_driver_t *drv) {
 static int sip_attach(maple_driver_t *drv, maple_device_t *dev) {
     sip_state_t *sip;
 
-    /* Allocate the sample buffer for 10 seconds worth of samples (11.025kHz,
-       16-bit signed samples). */
     sip = (sip_state_t *)dev->status;
-    sip->samples_buf = (uint8 *)malloc(11025 * 2 * 10);
-
-    if(sip->samples_buf == NULL) {
-        return -1;
-    }
-    else {
-        sip->is_sampling = 0;
-        sip->amp_gain = SIP_DEFAULT_GAIN;
-        sip->buf_pos = 0;
-        sip->buf_len = 11025 * 2 * 10;
-        dev->status_valid = 1;
-        return 0;
-    }
-}
-
-static void sip_detach(maple_driver_t *drv, maple_device_t *dev) {
-    sip_state_t *sip;
-
-    sip = (sip_state_t *)dev->status;
-
-    if(sip->samples_buf) {
-        free(sip->samples_buf);
-    }
+    sip->is_sampling = 0;
+    sip->amp_gain = SIP_DEFAULT_GAIN;
+    sip->callback = NULL;
+    dev->status_valid = 1;
+    return 0;
 }
 
 /* Device Driver Struct */
@@ -393,7 +295,7 @@ periodic:
 attach:
     sip_attach,
 detach:
-    sip_detach
+    NULL
 };
 
 /* Add the SIP to the driver chain */
